[tool.poetry]
name = "composition"
version = "0.1.0"
description = "Add composition and applying operators to python."
authors = ["eyalk5"]
license = "AGPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
multimethod="^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
