
[tool.poetry]
name = "python-composition"
version = "0.1.0"
description = "Add composition and applying operators to python."
authors = ["eyalk5"]
license = "AGPL 3.0"
readme = "README.md"
packages= [{include="composition"}]

[tool.poetry.dependencies]
python = "^3.10"
multimethod="^1.10"
sspipe={ git = "https://github.com/eyalk11/sspipe.git", branch = "master" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
